--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -3,11 +3,7 @@
 
 name: Swift
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [push]
 
 jobs:
   build:
